--- a/hello.html
+++ b/hello.html
@@ -2,14 +2,16 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1 {
+                color: aquamarine;
+            }
+        </style>
     </head>
     <body>
-<<<<<<< HEAD
         <h1>Welcome to my Website!!</h1>
-=======
-        <h1 style="color=blue;">Welcome to my Website!</h1>
->>>>>>> 8310ac641949ab1c6dd9a761b126be5f31ea1985
         <h2>Hello</h2>
         Hello, World!
     </body>
 </html>
+ 
