--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Welcome to my Website!!</h1>
-=======
-        <h1 style="color=blue;">Welcome to my Website!</h1>
->>>>>>> 8310ac641949ab1c6dd9a761b126be5f31ea1985
+        <h1 style="color: blue;">Welcome to my Website!!</h1>
         <h2>Hello</h2>
         Hello, World!
     </body>
